added training data and labels files

--- a/cnn/cnn.ipynb
+++ b/cnn/cnn.ipynb
@@ -453,26 +453,26 @@
       "WARNING:tensorflow:From <ipython-input-3-6498ac1de7b8>:1: load_dataset (from tensorflow.contrib.learn.python.learn.datasets) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.data.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/__init__.py:80: load_mnist (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/__init__.py:80: load_mnist (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:300: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:300: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please write your own downloading logic.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST-data/train-images-idx3-ubyte.gz\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST-data/train-labels-idx1-ubyte.gz\n",
       "Extracting MNIST-data/t10k-images-idx3-ubyte.gz\n",
       "Extracting MNIST-data/t10k-labels-idx1-ubyte.gz\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /anaconda3/envs/Tensorflow/lib/python3.7/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
      ]
@@ -490,11 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 3 4 ... 5 6 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(train_data.shape)"
+    "print(train_labels)"
    ]
   },
   {
@@ -557,29 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "iEfLJfhbkvTS"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/00/h4bvykss67s65dkzdjvp0tcc0000gq/T/tmpt3zw3x9v\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/00/h4bvykss67s65dkzdjvp0tcc0000gq/T/tmpt3zw3x9v', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
-      "graph_options {\n",
-      "  rewrite_options {\n",
-      "    meta_optimizer_iterations: ONE\n",
-      "  }\n",
-      "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fac91b92ba8>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist_classifier = tf.estimator.Estimator(\n",
     "    model_fn = cnn_model_fn,\n",
@@ -611,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -638,21 +630,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1WTk96pYqZ4E"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(55000, 28, 28, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_layer = tf.reshape(train_data, [-1, 28, 28, 1])\n",
     "print(input_layer.shape)"
@@ -666,52 +650,7 @@
     "colab_type": "code",
     "id": "Pnc1CR2AlbSe"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "To construct input pipelines, use the `tf.data` module.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "To construct input pipelines, use the `tf.data` module.\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "Tensor(\"Reshape:0\", shape=(100, 28, 28, 1), dtype=float32)\n",
-      "WARNING:tensorflow:From <ipython-input-2-a8490638bb47>:21: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.conv2d instead.\n",
-      "WARNING:tensorflow:From <ipython-input-2-a8490638bb47>:31: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.max_pooling2d instead.\n",
-      "WARNING:tensorflow:From <ipython-input-2-a8490638bb47>:69: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.dense instead.\n",
-      "WARNING:tensorflow:From <ipython-input-2-a8490638bb47>:77: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.dropout instead.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/layers/core.py:143: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/losses/losses_impl.py:209: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/tensorflow/python/training/monitored_session.py:809: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "To construct input pipelines, use the `tf.data` module.\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into /var/folders/00/h4bvykss67s65dkzdjvp0tcc0000gq/T/tmpt3zw3x9v/model.ckpt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
     "    x = train_data,\n",
@@ -786,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
