--- a/cnn/deficit_cnn.ipynb
+++ b/cnn/deficit_cnn.ipynb
@@ -27,44 +27,57 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ria_Y5e7mlEP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "M0DJNY2_onLW",
+        "colab_type": "text"
       },
       "source": [
-        "# Shape: [training_size, 50 * HISTORY]\n",
-        "TRAIN_SET = \"prob_of_death_at_80_e5_train_set.txt\"\n",
-        "TRAIN_LABELS = \"prob_of_death_at_80_e5_train_labels.txt\"\n",
-        "EVAL_SET = \"prob_of_death_at_80_e5_eval_set.txt\"\n",
-        "EVAL_LABELS = \"prob_of_death_at_80_e5_eval_labels.txt\"\n",
-        "\n",
-        "HISTORY = 5\n",
-        "\n",
-        "STEPS = 3 * 10 ** 5\n",
-        "LEARNING_RATE = 10 ** -4\n",
-        "DROPOUT_RATE = 0.4"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "function enable_vim() {\n",
+        "    document.querySelectorAll(\".CodeMirror\").forEach(\n",
+        "        function (e) {\n",
+        "            e.CodeMirror.setOption(\"vimMode\", true);\n",
+        "            CodeMirror.Vim.map('jk', '<Esc>', 'insert')\n",
+        "            CodeMirror.Vim.map('JK', '<Esc>', 'insert')\n",
+        "            CodeMirror.Vim.map('jk', '<Esc>', 'visual')\n",
+        "            CodeMirror.Vim.map('JK', '<Esc>', 'visual')\n",
+        "        }\n",
+        "    );\n",
+        "}\n",
+        "document.addEventListener(\n",
+        "    'keydown', function(e) {\n",
+        "        if (e.keyCode == 13 && e.metaKey || e.keyCode == 13 && e.shiftKey) {\n",
+        "            for (var i = 0; i < 10; i++) setTimeout(enable_vim, 1000 * i);\n",
+        "        }\n",
+        "    }\n",
+        ");\n",
+        "enable_vim();\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yrwDc8WSW1-v",
+        "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "8f799947-e1e7-4de3-ac18-4b876656f421",
+        "outputId": "54d6bc19-7fd7-44bc-fc6e-8de493d5222f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         }
       },
       "source": [
+        "from __future__ import absolute_import, division, print_function\n",
+        "\n",
+        "#import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import tensorflow as tf\n",
+        "#import keras\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,12 +91,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3sXBU9J-cPZR",
+        "id": "ria_Y5e7mlEP",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "PATH = \"/content/gdrive/My Drive/\""
+        "PATH = \"/content/gdrive/My Drive/\"\n",
+        "\n",
+        "DATA_FOLDER = \"e4_prob_of_death_at_80/\"\n",
+        "\n",
+        "# Shape: [training_size, 50 * HISTORY]\n",
+        "HISTORY = 8\n",
+        "NODE_COUNT = 50\n",
+        "\n",
+        "TRAIN_SET = DATA_FOLDER + str(HISTORY) + \"x5y_train_set.txt\"\n",
+        "TRAIN_LABELS = DATA_FOLDER + str(HISTORY) + \"x5y_train_labels.txt\"\n",
+        "EVAL_SET = DATA_FOLDER + str(HISTORY) + \"x5y_eval_set.txt\"\n",
+        "EVAL_LABELS = DATA_FOLDER + str(HISTORY) + \"x5y_eval_labels.txt\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -91,18 +115,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XodRkmXj4VVm",
+        "id": "gSBZxyZAqSOd",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from __future__ import absolute_import, division, print_function\n",
-        "\n",
-        "#import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import os\n",
-        "import tensorflow as tf\n",
-        "#import keras"
+        "STEPS = 1 * 10 ** 5\n",
+        "LEARNING_RATE = 10 ** -4\n",
+        "DROPOUT_RATE = 0.4\n",
+        "BATCH_SIZE = 10"
       ],
       "execution_count": 0,
       "outputs": []
@@ -114,7 +135,16 @@
         "colab_type": "text"
       },
       "source": [
-        "###Silence Warnings\n",
+        "###Silence Warnings\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L7RffwGmt3pO",
+        "colab_type": "text"
+      },
+      "source": [
         "- 0: all messages are logged (default behavior)\n",
         "- 1: INFO messages are not printed\n",
         "- 2: INFO and WARNING messages are not printed\n",
@@ -156,7 +186,7 @@
         "\n",
         "    ''' Input Layer '''\n",
         "    # Reshape X to 4-D tensor: [batch_size, width, height, channels]\n",
-        "    input_layer = tf.reshape(features, [-1, 50, HISTORY, 1])\n",
+        "    input_layer = tf.reshape(features, [-1, NODE_COUNT, HISTORY, 1])\n",
         "\n",
         "    ''' Convolutional Layer #1 '''\n",
         "    # Computes 32 features using a 5x5 filter with ReLU activation.\n",
@@ -201,8 +231,8 @@
         "    )\n",
         "\n",
         "    ''' Flatten tensor into a batch of vectors '''\n",
-        "    # Output Tensor Shape: [batch_size, 12 * 62]\n",
-        "    pool2_flat = tf.reshape(pool2, [-1, 768])\n",
+        "    # Output Tensor Shape: [batch_size, 12 * 64]\n",
+        "    pool2_flat = tf.reshape(pool2, [-1, 12 * 64 * int(HISTORY / 4)])\n",
         "\n",
         "    ''' Dense Layer '''\n",
         "    # Densely connected layer with 1024 neurons\n",
@@ -381,22 +411,22 @@
       "metadata": {
         "id": "VAKzY479Y0P0",
         "colab_type": "code",
-        "outputId": "b96ce7cd-1692-4265-9430-481286117880",
+        "outputId": "a4b33bda-114e-40ff-ff38-17bea3fd6dfa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 51
         }
       },
       "source": [
         "classifier = tf.estimator.Estimator(model_fn = deficit_cnn_model)"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0623 20:54:51.250265 140406964651904 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpg5qmu5wp\n"
+            "W0627 14:27:54.982012 139889817966464 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp_8iwdsvy\n"
           ],
           "name": "stderr"
         }
@@ -420,8 +450,8 @@
         "colab": {}
       },
       "source": [
-        "# Shape: [606, 50, 5, 1]\n",
-        "input_layer = tf.reshape(train_data, [-1, 50, HISTORY, 1])"
+        "# Shape: [606, 50, HISTORY, 1]\n",
+        "input_layer = tf.reshape(train_data, [-1, NODE_COUNT, HISTORY, 1])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -429,19 +459,52 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "YG8tnOD-7brM",
         "colab_type": "code",
-        "id": "-g_WPM1M7R3G",
-        "outputId": "d68f115b-cfb7-4e9c-e9b4-d8e87dff1a15",
+        "outputId": "20c833de-d7cb-4244-b2ee-395dd4a2f44b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 102
+        }
+      },
+      "source": [
+        "print(train_data.shape)\n",
+        "print(train_labels.shape)\n",
+        "print(eval_data.shape)\n",
+        "print(eval_labels.shape)\n",
+        "print(input_layer.shape)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(2126, 400)\n",
+            "(2126,)\n",
+            "(1000, 400)\n",
+            "(1000,)\n",
+            "(2126, 50, 8, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "-g_WPM1M7R3G",
+        "outputId": "69369dbe-a91e-48aa-f53d-5f0538d854bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 547
         }
       },
       "source": [
         "train_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
         "    x = train_data,\n",
         "    y = train_labels,\n",
-        "    batch_size = 10,\n",
+        "    batch_size = BATCH_SIZE,\n",
         "    num_epochs = None,\n",
         "    shuffle = True\n",
         ")\n",
@@ -449,58 +512,46 @@
         "classifier.train(\n",
         "    input_fn = train_input_fn,\n",
         "    steps = STEPS,\n",
-        "    hooks = [logging_hook]\n",
+        "    #hooks = [logging_hook]\n",
         ")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "W0623 20:54:51.510929 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.072113 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0623 20:54:51.527864 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.088628 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0623 20:54:51.530853 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.091035 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0623 20:54:51.543816 140406964651904 deprecation.py:323] From <ipython-input-6-e85f111df9b0>:16: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.103313 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:16: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0623 20:54:51.547052 140406964651904 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.106307 139889817966464 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0623 20:54:51.758714 140406964651904 deprecation.py:323] From <ipython-input-6-e85f111df9b0>:25: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.324639 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:25: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0623 20:54:51.903296 140406964651904 deprecation.py:323] From <ipython-input-6-e85f111df9b0>:59: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.469471 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:59: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dense instead.\n",
-            "W0623 20:54:52.181063 140406964651904 deprecation.py:323] From <ipython-input-6-e85f111df9b0>:68: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.757671 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:68: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0623 20:54:52.272688 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:55.846475 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0623 20:54:53.425120 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 14:27:57.094989 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7fb2e8de6438>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
         }
       ]
     },
@@ -519,11 +570,7 @@
       "metadata": {
         "id": "wz7EBVAJY659",
         "colab_type": "code",
-        "outputId": "9158d4a4-cbe2-4aa6-f67b-9b35fe72152c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        }
+        "colab": {}
       },
       "source": [
         "# Evaluate the model and print results\n",
@@ -536,25 +583,8 @@
         "eval_results = classifier.evaluate(input_fn = eval_input_fn)\n",
         "print(eval_results)\n"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "W0623 21:15:42.875232 140406964651904 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use standard file APIs to check for files with this prefix.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "{'accuracy': 0.6409, 'loss': 0.6384239, 'global_step': 300000}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
