--- a/cnn/deficit_cnn.ipynb
+++ b/cnn/deficit_cnn.ipynb
@@ -6,7 +6,9 @@
       "name": "deficit_cnn.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "q3kqWRyfwc3Z"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,10 +61,10 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "54d6bc19-7fd7-44bc-fc6e-8de493d5222f",
+        "outputId": "19e8d227-2e48-4ace-b3a6-dda26a99474f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         }
       },
       "source": [
@@ -77,12 +79,16 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
@@ -101,7 +107,7 @@
         "DATA_FOLDER = \"e4_prob_of_death_at_80/\"\n",
         "\n",
         "# Shape: [training_size, 50 * HISTORY]\n",
-        "HISTORY = 8\n",
+        "HISTORY = 20\n",
         "NODE_COUNT = 50\n",
         "\n",
         "TRAIN_SET = DATA_FOLDER + str(HISTORY) + \"x5y_train_set.txt\"\n",
@@ -124,6 +130,29 @@
         "LEARNING_RATE = 10 ** -4\n",
         "DROPOUT_RATE = 0.4\n",
         "BATCH_SIZE = 10"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hnAqZBPGkC2R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "CONV1_FILTER = 32\n",
+        "CONV1_SIZE = [5, 5]\n",
+        "\n",
+        "CONV2_FILTER = 64\n",
+        "CONV2_SIZE = [5, 5]\n",
+        "\n",
+        "POOL_SIZE = [2, 2]\n",
+        "POOL_STRIDE = 2\n",
+        "\n",
+        "DENSE_UNITS = 1024\n",
+        "LOGITS_UNITS = 10"
       ],
       "execution_count": 0,
       "outputs": []
@@ -194,8 +223,8 @@
         "    # Tensor Shape: [batch_size, 50, HISTORY, 32]\n",
         "    conv1 = tf.layers.conv2d(\n",
         "        inputs = input_layer,\n",
-        "        filters = 32,\n",
-        "        kernel_size = [5, 5],\n",
+        "        filters = CONV1_FILTER,\n",
+        "        kernel_size = CONV1_SIZE,\n",
         "        padding = \"same\",\n",
         "        activation = tf.nn.relu\n",
         "    )\n",
@@ -205,8 +234,8 @@
         "    # Tensor Shape: [batch_size, 25, HISTORY / 2, 32]\n",
         "    pool1 = tf.layers.max_pooling2d(\n",
         "        inputs = conv1,\n",
-        "        pool_size = [2, 2],\n",
-        "        strides = 2\n",
+        "        pool_size = POOL_SIZE,\n",
+        "        strides = POOL_STRIDE\n",
         "    )\n",
         "\n",
         "    ''' Convolutional Layer #2 '''\n",
@@ -215,8 +244,8 @@
         "    # Tensor Shape: [batch_size, 25, HISTORY / 2, 64]\n",
         "    conv2 = tf.layers.conv2d(\n",
         "        inputs = pool1,\n",
-        "        filters = 64,\n",
-        "        kernel_size = [5, 5],\n",
+        "        filters = CONV2_FILTER,\n",
+        "        kernel_size = CONV2_SIZE,\n",
         "        padding = \"same\",\n",
         "        activation = tf.nn.relu\n",
         "    )\n",
@@ -226,8 +255,8 @@
         "    # Tensor Shape: [batch_size, 12, HISTORY / 4, 64]\n",
         "    pool2 = tf.layers.max_pooling2d(\n",
         "        inputs = conv2,\n",
-        "        pool_size = [2, 2],\n",
-        "        strides = 2\n",
+        "        pool_size = POOL_SIZE,\n",
+        "        strides = POOL_STRIDE\n",
         "    )\n",
         "\n",
         "    ''' Flatten tensor into a batch of vectors '''\n",
@@ -239,7 +268,7 @@
         "    # Tensor Shape: [batch_size, 1024]\n",
         "    dense = tf.layers.dense(\n",
         "        inputs = pool2_flat,\n",
-        "        units = 1024,\n",
+        "        units = DENSE_UNITS,\n",
         "        activation = tf.nn.relu\n",
         "    )\n",
         "    \n",
@@ -258,7 +287,7 @@
         "    # Tensor Shape: [batch_size, 1024]\n",
         "    logits = tf.layers.dense(\n",
         "        inputs = dropout,\n",
-        "        units = 10\n",
+        "        units = LOGITS_UNITS\n",
         "    )\n",
         "\n",
         "    predictions = {\n",
@@ -411,7 +440,7 @@
       "metadata": {
         "id": "VAKzY479Y0P0",
         "colab_type": "code",
-        "outputId": "a4b33bda-114e-40ff-ff38-17bea3fd6dfa",
+        "outputId": "44adbbd1-f07c-4460-f882-bc78f86d0152",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -420,13 +449,13 @@
       "source": [
         "classifier = tf.estimator.Estimator(model_fn = deficit_cnn_model)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0627 14:27:54.982012 139889817966464 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp_8iwdsvy\n"
+            "W0627 16:04:52.512900 140001776846720 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpjrmqhofs\n"
           ],
           "name": "stderr"
         }
@@ -461,7 +490,7 @@
       "metadata": {
         "id": "YG8tnOD-7brM",
         "colab_type": "code",
-        "outputId": "20c833de-d7cb-4244-b2ee-395dd4a2f44b",
+        "outputId": "4935554e-b277-4b44-a65c-0dd70cbf00a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -474,16 +503,16 @@
         "print(eval_labels.shape)\n",
         "print(input_layer.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(2126, 400)\n",
+            "(2126, 1000)\n",
             "(2126,)\n",
-            "(1000, 400)\n",
+            "(1000, 1000)\n",
             "(1000,)\n",
-            "(2126, 50, 8, 1)\n"
+            "(2126, 50, 20, 1)\n"
           ],
           "name": "stdout"
         }
@@ -494,7 +523,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "69369dbe-a91e-48aa-f53d-5f0538d854bd",
+        "outputId": "435d1bb3-9371-4def-b3bf-fbe0dd24afa7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
@@ -520,34 +549,34 @@
         {
           "output_type": "stream",
           "text": [
-            "W0627 14:27:55.072113 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.204631 139635830896512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0627 14:27:55.088628 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.220952 139635830896512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0627 14:27:55.091035 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.223834 139635830896512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0627 14:27:55.103313 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:16: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.235998 139635830896512 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:16: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0627 14:27:55.106307 139889817966464 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.239010 139635830896512 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0627 14:27:55.324639 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:25: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.449787 139635830896512 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:25: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0627 14:27:55.469471 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:59: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.591318 139635830896512 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:59: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dense instead.\n",
-            "W0627 14:27:55.757671 139889817966464 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:68: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.864712 139635830896512 deprecation.py:323] From <ipython-input-5-41469d7a9ea7>:68: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0627 14:27:55.846475 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:51.946798 139635830896512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0627 14:27:57.094989 139889817966464 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0627 19:42:53.026972 139635830896512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
