now supports dynamic filter sizes

--- a/cnn/dynamic_deficit_cnn.ipynb
+++ b/cnn/dynamic_deficit_cnn.ipynb
@@ -61,10 +61,10 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "5ad7dff4-fb14-4e9c-d723-c6f8cafa8972",
+        "outputId": "2670f62a-edf9-474b-84ee-dce4d39d2cad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 54
         }
       },
       "source": [
@@ -158,7 +158,7 @@
         "colab": {}
       },
       "source": [
-        "CONV_FILTERS = [64, 64]\n",
+        "CONV_FILTERS = [64, 128]\n",
         "CONV_SIZES = [[5, 5], [5, 5]]\n",
         "\n",
         "CONV_COUNT = len(CONV_FILTERS)\n",
@@ -239,7 +239,7 @@
         "        ''' Convolutional Layer '''\n",
         "        # Computes 32 features using a 5x5 filter with ReLU activation.\n",
         "        #   Padding is added to preserve width and height.\n",
-        "        # Tensor Shape: [batch_size, 50, HISTORY, 32]\n",
+        "        # Output Tensor Shape: [batch_size, 50, HISTORY, filter size]\n",
         "        layer = tf.layers.conv2d(\n",
         "            inputs = layer,\n",
         "            filters = CONV_FILTERS[i],\n",
@@ -250,7 +250,7 @@
         "    \n",
         "        ''' Pooling Layer '''\n",
         "        # Max pooling layer with a 2x2 filter and stride of 2\n",
-        "        # Tensor Shape: [batch_size, 25, HISTORY / 2, 32]\n",
+        "        # Output Tensor Shape: [batch_size, 25, HISTORY / 2, filter size]\n",
         "        layer = tf.layers.max_pooling2d(\n",
         "            inputs = layer,\n",
         "            pool_size = POOL_SIZE,\n",
@@ -258,8 +258,9 @@
         "        )\n",
         "\n",
         "    ''' Flatten tensor into a batch of vectors '''\n",
-        "    # Output Tensor Shape: [batch_size, 12 * 64]\n",
-        "    pool2_flat = tf.reshape(layer, [-1, 12 * 64 * int(HISTORY / 4)])\n",
+        "    # Output Tensor Shape:\n",
+        "    #   [batch_size, 12 * last filter size * (HISTORY / pooling size)]\n",
+        "    pool2_flat = tf.reshape(layer, [-1, 12 * CONV_FILTERS[i] * int(HISTORY / 4)])\n",
         "\n",
         "    ''' Dense Layer '''\n",
         "    # Densely connected layer with 1024 neurons\n",
@@ -438,10 +439,10 @@
       "metadata": {
         "id": "VAKzY479Y0P0",
         "colab_type": "code",
-        "outputId": "93c693b8-4f3a-46e9-cc48-f94cdca3e603",
+        "outputId": "7813df9e-ed9d-4c06-eb9e-26ffb6cda2dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 71
         }
       },
       "source": [
@@ -453,7 +454,7 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0628 14:04:50.842098 139955407804288 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpyjmf32do\n"
+            "W0628 15:45:36.186709 140579850200960 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp9oizd2ko\n"
           ],
           "name": "stderr"
         }
@@ -486,42 +487,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YG8tnOD-7brM",
-        "colab_type": "code",
-        "outputId": "9c36895c-ab1b-4c64-b27f-afcbe21b2634",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        }
-      },
-      "source": [
-        "print(train_data.shape)\n",
-        "print(train_labels.shape)\n",
-        "print(eval_data.shape)\n",
-        "print(eval_labels.shape)\n",
-        "print(input_layer.shape)"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(2126, 250)\n",
-            "(2126,)\n",
-            "(1000, 250)\n",
-            "(1000,)\n",
-            "(2126, 50, 5, 1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "f107dbcd-65e3-45c8-a4c6-53be6606a78a",
+        "outputId": "70541873-8ca0-4b6b-deaf-ceef0053282c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
@@ -547,34 +515,34 @@
         {
           "output_type": "stream",
           "text": [
-            "W0628 14:04:50.923365 139955407804288 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.245956 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0628 14:04:50.941957 139955407804288 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.260403 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 14:04:50.944071 139955407804288 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.262594 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 14:04:50.957344 139955407804288 deprecation.py:323] From <ipython-input-6-8b3735620a51>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.275767 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0628 14:04:50.960339 139955407804288 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.278989 140579850200960 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0628 14:04:51.168781 139955407804288 deprecation.py:323] From <ipython-input-6-8b3735620a51>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.478728 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0628 14:04:51.315082 139955407804288 deprecation.py:323] From <ipython-input-6-8b3735620a51>:42: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.610905 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dense instead.\n",
-            "W0628 14:04:51.595794 139955407804288 deprecation.py:323] From <ipython-input-6-8b3735620a51>:51: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.875300 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0628 14:04:51.680383 139955407804288 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:36.957730 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0628 14:04:52.746370 139955407804288 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 15:45:37.955398 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
